changed nlam website address in download link

--- a/src/app/app-nlam/app-nlam.component.html
+++ b/src/app/app-nlam/app-nlam.component.html
@@ -62,12 +62,12 @@
         
         <div class="container" style="text-align: center;margin-left:50px">
             <div class="inline-block">
-                <a href="http://nlam.siddhanath.org.uk" target="_blank">
+                <a href="http://snauthentication.azurewebsites.net" target="_blank">
                     <i class="fa fa-cloud-download fa-2x" aria-hidden="true"></i>
                 </a>
             </div> 
             <div class="inline-block">
-                    <h3>Click <a href="http://google.co.uk" target="_blank">here</a> to download three videos</h3>
+                    <h3>Click <a href="http://snauthentication.azurewebsites.net" target="_blank">here</a> to download three videos</h3>
             </div>
          </div>
     </section>
