--- a/src/app/app-nlam/app-nlam.component.html
+++ b/src/app/app-nlam/app-nlam.component.html
@@ -1,167 +1,171 @@
 <div>
-    <img src="app/images/nlam.png" style="width:100%;height:500px;">
-</div>
-
-
-<div class="container-fluid" style="padding-left:30%;">
-    <div class="dividerLine">&nbsp;</div>
-    <div style="width:20px;display:inline-block;margin-top:40px;height:2px;vertical-align: top;">
-        <strong style="vertical-align: top;">...</strong></div>
-    <div class="dividerLine">&nbsp;</div>
-</div>
-
-<div style="padding:30px;width:44%;display:inline-block;vertical-align: top;">
-    <section>
-        <h3>New Life Awakening Movement</h3>
-        <ul>
-            <li>
-                <span>Celebrating Livingness</span>
-            </li>
-            <li>
-                <span>Generates Vitality, Virility and Vivacity</span>
-            </li>
-            <li>
-                <span>Sources Pranic Health, Healing and Happiness</span>
-            </li>
-            <li>
-                <span>Rejuvenates ( A Rejuven-Detox technique)</span>
-            </li>
-            <li>
-                <span>Celebrating Livingness</span>
-            </li>
-        </ul>
-        <br>
-        <h3>Golden Lotus (Heartful Art)</h3>
-        <ul>
-            <li>
-                <span>Flowers heart chakra to feel tranquility and love</span>
-            </li>
-            <li>
-                <span>Dissolves Emotional Suffering</span>
-            </li>
-            <li>
-                <span>Celebrates Soulful Happiness</span>
-            </li>            
-        </ul>        
-        <br>
-        <h3>Earth Peace Meditation</h3>
-        <ul>
-            <li>
-                 <span>Fills you with peace and love</span>
-            </li>
-            <li>
-                <span>Radiates earth peace through self peace</span>
-            </li>
-            <li>
-                <span>Harmonizes a peaceful co-existence among the peoples of earth</span>
-            </li>            
-        </ul>   
-        <br>
-        <div style="margin-left:100px;background-color:#feeb7b;height:1px;width:70%;height:2px;margin-top:40px;">&nbsp;</div>
-        <br>
-        
-        <div class="container" style="text-align: center;margin-left:50px">
-            <div class="inline-block">
-                <a href="http://snauthentication.azurewebsites.net" target="_blank">
-                    <i class="fa fa-cloud-download fa-2x" aria-hidden="true"></i>
-                </a>
-            </div> 
-            <div class="inline-block">
-                    <h3>Click <a href="http://snauthentication.azurewebsites.net" target="_blank">here</a> to download three videos</h3>
-            </div>
-         </div>
-    </section>
-</div>
-
-<div style="display:inline-block;background-color:#feeb7b;width:2px;vertical-align: top;margin-top:180px;margin-right:10px;height:500px;">&nbsp;</div>
-
-<div style="width:45%;display:inline-block;padding-top:20px;">
-    <h3>Frequently Asked Questions</h3>
-
-    <p>
-        <strong>Q: Is this a religion or cult?</strong>
-        <br>
-        A: It is neither. It is a way of life celebrating soulfulness - the joy felt in your body, mind and soul.
-        Everyone can participate in this celebration, irrespective of creed or beliefs.
-    </p>
-    <p>
-        <strong>Q: Are there any charges or hidden fees to get the full techniques?</strong>
-        <br>
-        A: You are receiving the complete NLAM system at this time – it is completely free. From time to
-        time, we may add techniques or augment the existing ones – theses will also be provided free.
-    </p>
-    <p>
-        <strong>Q: Why are you providing these precious techniques free?</strong>
-        <br>
-        A: It is the blessing of the Himalayan Master Yogiraj Siddhanath to help humanity find happiness
-        and develop self peace for the sake of earth peace.
-    </p>
-    <p>
-        <strong>Q: Are there any precautions about doing these techniques?</strong>
-        <br>
-        A: There are no restrictions for the Siddhanath Earth Peace and Golden Lotus techniques. One
-        should refrain form performing the Siddhanath Surya Yoga with a full stomach – it should be
-        done before meals or at least 2 hours after food.
-    </p>
-    <p>
-        <strong>Q: Can pregnant women do these techniques?</strong>
-        <br>
-        A: Yes, but refrain from any jerky movements during Siddhanth Surya Yoga.
-    </p>
-     <p>
-        <strong>Q: I've downloaded the videos. Now, which one should I do first?</strong>
-        <br>
-        A: Siddhanath Surya, followed by Golden lotus and then Earth peace.
-    </p>
-    <p>
-        <strong>Q: How often should I do these techniques to get results?</strong>
-        <br>
-        A: Once a day in the morning and if time permits, then add an evening session as well.
-        Results come quickly but remember that this is a life-long practice of healing and wholing
-    </p>
-    <p>
-        <strong>Q: How long should I practice Surya before adding the Golden lotus and / or Earth Peace?</strong>
-        <br>
-        A: Practice half an hour for five days and then add the Golden lotus followed by five more days of
-        practice before adding the Earth Peace.
-    </p>
-    <p>
-        <strong>Q: Can we learn the Surya mantra from a teacher?</strong>
-        <br>
-        A: Yes. You can also get the Instructional CD for the Surya mantra.
-    </p>    
-    <p>
-        <strong>Q: How can I contact a teacher and learn personally?</strong>
-        <br>
-        A: Website siddhanath.org and fill in form in the registration section
-    </p>
-</div>  
-
-<div class="container-fluid" style="padding-left:30%;padding-bottom:50px;">
-    <div class="dividerLine">&nbsp;</div>
-    <div style="width:20px;display:inline-block;margin-top:40px;height:2px;vertical-align: top;">
-        <strong style="vertical-align: top;">...</strong></div>
-    <div class="dividerLine">&nbsp;</div>
-</div>
-
-
-<div class="container-fluid" style="position: relative;background-image: url(../app/images/background-images/starspace.png);background-repeat:repeat;height:500px;margin-top:20px;">
-    <div class="container">
-        <section style="position:absolute;top:200px;left:100px;width:100%;color:white;font-size:20px;">
-           
-                <ul>
-                    <li>
-                       <span>Feel calmer, more energetic first, followed by improvement in physical, emotional and mental health.</span>                        
-                    </li>
-                    <li>
-                        <span>Celebrate soulful happiness and spread it in the lives of others</span>
-                    </li>
-                    <li>
-                        <span>Celebrating Livingness</span>
-                    </li>
-                </ul>
-            
-        </section>
+    <div class="row">
+            <img src="assets/images/nlam.png" style="width:100%;">
     </div>
+
+
+    <div class="row" style="padding-left:30%;padding-bottom:10px;">
+        <div class="dividerLine">&nbsp;</div>
+        <div style="width:20px;display:inline-block;margin-top:38px;height:2px;vertical-align: top;">
+            <strong style="vertical-align: top;">...</strong></div>
+        <div class="dividerLine">&nbsp;</div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-6 col-sm-6 col-md-6 col-xs-12">
+        <section>
+            <h3>New Life Awakening Movement</h3>
+            <ul>
+                <li>
+                    <span>Celebrating Livingness</span>
+                </li>
+                <li>
+                    <span>Generates Vitality, Virility and Vivacity</span>
+                </li>
+                <li>
+                    <span>Sources Pranic Health, Healing and Happiness</span>
+                </li>
+                <li>
+                    <span>Rejuvenates ( A Rejuven-Detox technique)</span>
+                </li>
+                <li>
+                    <span>Celebrating Livingness</span>
+                </li>
+            </ul>
+            <br>
+            <h3>Golden Lotus (Heartful Art)</h3>
+            <ul>
+                <li>
+                    <span>Flowers heart chakra to feel tranquility and love</span>
+                </li>
+                <li>
+                    <span>Dissolves Emotional Suffering</span>
+                </li>
+                <li>
+                    <span>Celebrates Soulful Happiness</span>
+                </li>            
+            </ul>        
+            <br>
+            <h3>Earth Peace Meditation</h3>
+            <ul>
+                <li>
+                     <span>Fills you with peace and love</span>
+                </li>
+                <li>
+                    <span>Radiates earth peace through self peace</span>
+                </li>
+                <li>
+                    <span>Harmonizes a peaceful co-existence among the peoples of earth</span>
+                </li>            
+            </ul>   
+            <br>
+            <div style="margin-left:100px;background-color:#feeb7b;height:2px;width:70%;margin-top:40px;">&nbsp;</div>
+            <br>
+
+            <div class="row">
+                <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1" style=padding-top:5px;>
+                    <a href="http://nlam.siddhanath.org.uk" target="_blank">
+                        <i class="fa fa-cloud-download fa-2x" aria-hidden="true"></i>
+                    </a>
+                </div> 
+                <div class="col-lg-11 col-sm-11 col-md-11 col-xs-11 text-left">
+                        <h4>Click <a href="http://nlam.siddhanath.org.uk" target="_blank">here</a> to download three videos</h4>
+                </div>
+             </div>
+        </section>
+        </div>
+        <div class="col-lg-6 col-sm-6 col-md-6 col-xs-12" style="background-color:#fbfbfb">
+        <div>
+            <h3>Frequently Asked Questions</h3>
+
+        <p>
+            <strong>Q: Is this a religion or cult?</strong>
+            <br>
+            A: It is neither. It is a way of life celebrating soulfulness - the joy felt in your body, mind and soul.
+            Everyone can participate in this celebration, irrespective of creed or beliefs.
+        </p>
+        <p>
+            <strong>Q: Are there any charges or hidden fees to get the full techniques?</strong>
+            <br>
+            A: You are receiving the complete NLAM system at this time – it is completely free. From time to
+            time, we may add techniques or augment the existing ones – theses will also be provided free.
+        </p>
+        <p>
+            <strong>Q: Why are you providing these precious techniques free?</strong>
+            <br>
+            A: It is the blessing of the Himalayan Master Yogiraj Siddhanath to help humanity find happiness
+            and develop self peace for the sake of earth peace.
+        </p>
+        <p>
+            <strong>Q: Are there any precautions about doing these techniques?</strong>
+            <br>
+            A: There are no restrictions for the Siddhanath Earth Peace and Golden Lotus techniques. One
+            should refrain form performing the Siddhanath Surya Yoga with a full stomach – it should be
+            done before meals or at least 2 hours after food.
+        </p>
+        <p>
+            <strong>Q: Can pregnant women do these techniques?</strong>
+            <br>
+            A: Yes, but refrain from any jerky movements during Siddhanth Surya Yoga.
+        </p>
+         <p>
+            <strong>Q: I've downloaded the videos. Now, which one should I do first?</strong>
+            <br>
+            A: Siddhanath Surya, followed by Golden lotus and then Earth peace.
+        </p>
+        <p>
+            <strong>Q: How often should I do these techniques to get results?</strong>
+            <br>
+            A: Once a day in the morning and if time permits, then add an evening session as well.
+            Results come quickly but remember that this is a life-long practice of healing and wholing
+        </p>
+        <p>
+            <strong>Q: How long should I practice Surya before adding the Golden lotus and / or Earth Peace?</strong>
+            <br>
+            A: Practice half an hour for five days and then add the Golden lotus followed by five more days of
+            practice before adding the Earth Peace.
+        </p>
+        <p>
+            <strong>Q: Can we learn the Surya mantra from a teacher?</strong>
+            <br>
+            A: Yes. You can also get the Instructional CD for the Surya mantra.
+        </p>    
+        <p>
+            <strong>Q: How can I contact a teacher and learn personally?</strong>
+            <br>
+            A: Website siddhanath.org and fill in form in the registration section
+        </p>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="row" style="padding-left:30%;padding-bottom:40px;">
+        <div class="dividerLine">&nbsp;</div>
+        <div style="width:20px;display:inline-block;margin-top:38px;height:2px;vertical-align: top;">
+            <strong style="vertical-align: top;">...</strong></div>
+        <div class="dividerLine">&nbsp;</div>
+    </div>
+
+
+    <div class="row" style="position: relative;background-image: url(../assets/images/background-images/starspace.png);background-repeat:repeat;height:500px;margin-top:20px;">
+        <div class="container-fluid">
+            <section style="position:absolute;top:200px;left:20px;width:89%;color:white;font-size:20px;">
+
+                    <ul>
+                        <li>
+                           <span>Feel calmer, more energetic first, followed by improvement in physical, emotional and mental health.</span>                        
+                        </li>
+                        <li>
+                            <span>Celebrate soulful happiness and spread it in the lives of others</span>
+                        </li>
+                        <li>
+                            <span>Celebrating Livingness</span>
+                        </li>
+                    </ul>
+
+            </section>
+        </div>
+    </div>
+    <div style="height:2px;background-color:white"></div>
 </div>
-<div style="height:2px;background-color:white"></div>
