--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="http://siddhanath.org.uk">
-                <img height="100" width="100" src="app/images/siddhanath-logo-web.png" alt="Siddhanath">
-              </a>
+                <a href="http://siddhanath.org.uk" style="margin-left:1%">
+                    <img height="100" width="100" src="assets/images/siddhanath-logo-web.png" alt="Siddhanath">
+                </a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav  navbar-right">
@@ -31,19 +31,20 @@
             </div>
         </div>
     </div>
-<div style="background-color:#E0B13A;;height:97px;"></div>
-    <router-outlet></router-outlet>
+<div class="row" style="background-color:#E0B13A;;height:90px;"></div>
+<router-outlet></router-outlet>
 
-<footer id="footer">
+<div class="row">
+    <footer id="footer">
     <!-- Footer Top Start -->
     <div class="footer-top">
-        <div class="container">
+        <div>
             <div class="row">
-                <section class="col-lg-3 col-md-3 col-xs-12 col-sm-3 footer-one">
+                <section class="col-lg-3 col-md-3 col-xs-12 col-sm-3 footer-one" style="margin-left:20px;">
                     <h3>About</h3>
                     <p> Kriya Yoga is a comprehensive spiritual path taught by Gurunath, author of  <a href="https://www.amazon.co.uk/Babaji-Lightning-Standing-Special-Abridged/dp/0984095748/" target="_blank">The Lightening Standing Still</a>. Kriya also refers to the scientific technique for the spiritual evolution of men from brute to man, man to man, man to God. </p>
                 </section>
-                <section class="col-lg-3 col-md-3 col-xs-12 col-sm-3 footer-two">
+                <section class="col-lg-3 col-md-3 col-xs-12 col-sm-3 footer-two" style="margin-left:20px;">
                     <h3>Twitter Stream</h3>
                     <ul id="tweets">
                         <li style="opacity: 1;">
@@ -51,11 +52,11 @@
                         </li>
                     </ul>
                 </section>
-                <section class="col-lg-3 col-md-3 col-xs-12 col-sm-3 footer-three">
+                <section class="col-lg-3 col-md-3 col-xs-12 col-sm-3 footer-three" style="margin-left:20px;">
                     <h3>Contact Us</h3>
                     <ul class="contact-us">
                         <li> <i class="fa fa-map-marker"></i>
-                            <p> <strong class="contact-pad">Address:</strong> House: 21, Walton Gardens,
+                            <p> <strong class="contact-pad">Address:</strong> 21, Walton Gardens,
                                 <br> Wembley
                                 <br> United Kingdom </p>
                         </li>
@@ -68,7 +69,7 @@
                     </ul>
                 </section>
                 <!--
-                <section class="col-lg-3 col-md-3 col-xs-12 col-sm-3 footer-four">
+                <section class="col-lg-3 col-md-3 col-xs-12 col-sm-3 footer-four" style="margin-left:20px;">
                     <h3>Flickr Photostream</h3>
                     <ul id="flickrfeed" class="thumbs">
                         <li>
@@ -98,7 +99,7 @@
     <!-- Footer Top End -->
     <!-- Footer Bottom Start -->
     <div class="footer-bottom">
-        <div class="container">
+        <div>
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6 "> © Copyright 2016 by <a href="#">Siddhanath</a>. All Rights Reserved. </div>
                 <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6 ">
@@ -115,7 +116,6 @@
     </div>
     <!-- Footer Bottom End -->
 </footer>
-
-
+</div>
 
 
