--- a/src/app/app-about/app-about.component.html
+++ b/src/app/app-about/app-about.component.html
@@ -1,58 +1,61 @@
 <div>
-    <img src="app/images/aboutus.jpg" style="width:100%;height:500px;">
+    <div class="row">
+        <img src="assets/images/yogi-teaching.jpg" style="width:100%;">
+    </div>
+
+    <div class="row" style="padding-left:30%;padding-bottom:20px;">
+        <div class="dividerLine">&nbsp;</div>
+        <div style="width:20px;display:inline-block;margin-top:38px;height:2px;vertical-align: top;">
+            <strong style="vertical-align: top;">...</strong></div>
+        <div class="dividerLine">&nbsp;</div>
+    </div>
+
+<div class="row">
+    <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2"></div>
+    <div class="col-lg-8 col-sm-8 col-md-8 col-xs-12">
+        <section>
+            <p>
+                An Illumined Being with direct experiences of Mahavatar Babaji Gorakshanath, Yogiraj Gurunath Siddhanath spent his early years in the Himalayas with the great Nath Yogis in whose presence he was transformed, realizing the unity of all Yogas and Religions.
+            </p>
+
+            <strong>Words inform, but Experience TRANSFORMS</strong>
+
+            <p>
+                A Master of Kundalini Kriya Yoga, Yogiraj's message to Humanity is EARTH PEACE THROUGH SELF PEACE. In conveying his message, Yogiraj goes beyond the limited reach of words and offers the grace of direct Experience: he is the only Master who imparts SHIVAPAT, in which you experience his Soul Consciousness of thoughtless Awareness, essential to the healing and spiritual evolution of humankind.
+            </p>
+
+
+            <p>
+                More on SHIVAPAT: "For those who are receptive and in attunement, Yogiraj imparts dimensions of his own Expanded Still Mind Consciousness of Natural Enlightenment, called Sahaj Samadhi. He gives his Soul in the form of a profound stillness …a profound silence. Experience of this exquisitely heightened awareness produces a fathomless peace beyond normal perception. Guidance in Out-of-Body Awareness and dynamic Transmissions of vital energy that heal and reduce stress are also bestowed upon those sincere seekers who participate in his public sessions."
+            </p>
+
+            <p>
+                Through Kriya Yoga he delivers to humanity an urgent message for all to accept individual responsibility for the genesis of Earth peace, rather than relying on governing bodies to bring about a harmonious state.  Kundalini Kriya Yoga is the science of the Evolution of Human Consciousness.  It is the swiftest and simplest way to get to God.  Kriya Yoga enriches your life step by step, and makes you experience the Godessence within you.
+            </p>
+
+            <p>
+                Eloquent and articulate in expression, all that Yogiraj manifests is through the philosophy of Enlightened Action. In the truest and highest sense, the Master (Yogiraj) does nothing, as all of his activities of serving humanity through Yoga are initiated through Divine Consciousness.
+            </p>
+
+            <p>
+                For the benefit of humanity, Yogiraj also unveils the ancient art and science of Hamsa Yoga - The Way of the White Swan - an inner, meditative journey leading to spiritual awakening and healing. <strong>“Hamsa” literally means Swan, and symbolizes the Soul.</strong> The Way of the White Swan also holds special knowledge for those interested in the scientific basis of consciousness. By tracing the illuminating flow of Consciousness through the <strong>Cave of Brahma</strong> (third ventricle) to the lateral ventricles which are formed like a Swan in flight, insight may be gained as to how a Yogi advances to enlightenment.
+            </p>
+
+            <strong>
+                Teachers inform you, but a Master TRANSFORMS you!
+            </strong>
+
+
+            <p>
+                Experience of the Christ Consciousness inherent in all Souls, a clear mind of bliss, may be realized through <strong>Kundalini Kriya Yoga</strong>, the sacred science of the Self. These higher levels of consciousness are accessible to each human being through constant practice with an open mind. Gifts of the Soul, are selflessly conveyed through the Sat-Guru as a servant of Humanity and Divinity.  <strong>Yogiraj is a TRUE MASTER who, unlike a teacher, awakens you to the next level of spiritual experience.</strong>
+            </p>
+        </section>
+    </div>
 </div>
-
-<div class="container-fluid" style="padding-left:30%;">
-    <div class="dividerLine">&nbsp;</div>
-    <div style="width:20px;display:inline-block;margin-top:40px;height:2px;vertical-align: top;">
-        <strong style="vertical-align: top;">...</strong></div>
-    <div class="dividerLine">&nbsp;</div>
-</div>
-
-
-<div style="padding:30px;width:66%;display:inline-block;">
-    <section>
-        <p>
-            An Illumined Being with direct experiences of Mahavatar Babaji Gorakshanath, Yogiraj Gurunath Siddhanath spent his early years in the Himalayas with the great Nath Yogis in whose presence he was transformed, realizing the unity of all Yogas and Religions.
-        </p>
-
-        <strong>Words inform, but Experience TRANSFORMS</strong>
-
-        <p>
-            A Master of Kundalini Kriya Yoga, Yogiraj's message to Humanity is EARTH PEACE THROUGH SELF PEACE. In conveying his message, Yogiraj goes beyond the limited reach of words and offers the grace of direct Experience: he is the only Master who imparts SHIVAPAT, in which you experience his Soul Consciousness of thoughtless Awareness, essential to the healing and spiritual evolution of humankind.
-        </p>
-
-
-        <p>
-            More on SHIVAPAT: "For those who are receptive and in attunement, Yogiraj imparts dimensions of his own Expanded Still Mind Consciousness of Natural Enlightenment, called Sahaj Samadhi. He gives his Soul in the form of a profound stillness …a profound silence. Experience of this exquisitely heightened awareness produces a fathomless peace beyond normal perception. Guidance in Out-of-Body Awareness and dynamic Transmissions of vital energy that heal and reduce stress are also bestowed upon those sincere seekers who participate in his public sessions."
-        </p>
-
-        <p>
-            Through Kriya Yoga he delivers to humanity an urgent message for all to accept individual responsibility for the genesis of Earth peace, rather than relying on governing bodies to bring about a harmonious state.  Kundalini Kriya Yoga is the science of the Evolution of Human Consciousness.  It is the swiftest and simplest way to get to God.  Kriya Yoga enriches your life step by step, and makes you experience the Godessence within you.
-        </p>
-
-        <p>
-            Eloquent and articulate in expression, all that Yogiraj manifests is through the philosophy of Enlightened Action. In the truest and highest sense, the Master (Yogiraj) does nothing, as all of his activities of serving humanity through Yoga are initiated through Divine Consciousness.
-        </p>
-
-        <p>
-            For the benefit of humanity, Yogiraj also unveils the ancient art and science of Hamsa Yoga - The Way of the White Swan - an inner, meditative journey leading to spiritual awakening and healing. <strong>“Hamsa” literally means Swan, and symbolizes the Soul.</strong> The Way of the White Swan also holds special knowledge for those interested in the scientific basis of consciousness. By tracing the illuminating flow of Consciousness through the <strong>Cave of Brahma</strong> (third ventricle) to the lateral ventricles which are formed like a Swan in flight, insight may be gained as to how a Yogi advances to enlightenment.
-        </p>
-
-        <strong>
-            Teachers inform you, but a Master TRANSFORMS you!
-        </strong>
-
-
-        <p>
-            Experience of the Christ Consciousness inherent in all Souls, a clear mind of bliss, may be realized through <strong>Kundalini Kriya Yoga</strong>, the sacred science of the Self. These higher levels of consciousness are accessible to each human being through constant practice with an open mind. Gifts of the Soul, are selflessly conveyed through the Sat-Guru as a servant of Humanity and Divinity.  <strong>Yogiraj is a TRUE MASTER who, unlike a teacher, awakens you to the next level of spiritual experience.</strong>
-        </p>
-    </section>
-</div>
-
-<div class="container-fluid" style="padding-left:30%;padding-bottom:50px;">
-    <div class="dividerLine">&nbsp;</div>
-    <div style="width:20px;display:inline-block;margin-top:40px;height:2px;vertical-align: top;">
-        <strong style="vertical-align: top;">...</strong></div>
-    <div class="dividerLine">&nbsp;</div>
+    <div class="row" style="padding-left:30%;padding-bottom:40px;">
+        <div class="dividerLine">&nbsp;</div>
+        <div style="width:20px;display:inline-block;margin-top:38px;height:2px;vertical-align: top;">
+            <strong style="vertical-align: top;">...</strong></div>
+        <div class="dividerLine">&nbsp;</div>
+    </div>
 </div>
