--- a/src/app/app-contact/app-contact.component.html
+++ b/src/app/app-contact/app-contact.component.html
@@ -1,40 +1,44 @@
 <div>
-    <img src="app/images/contactus.jpg" style="width:100%;height:500px;">
-</div>
+    <div class="row">
+        <img src="assets/images/aboutus.jpg" style="width:100%;">
+    </div>
 
-<div class="container-fluid" style="padding-left:30%;">
-    <div class="dividerLine">&nbsp;</div>
-    <div style="width:20px;display:inline-block;margin-top:40px;height:2px;vertical-align: top;">
-        <strong style="vertical-align: top;">...</strong></div>
-    <div class="dividerLine">&nbsp;</div>
-</div>
+    <div class="row" style="padding-left:30%;padding-bottom:20px;">
+        <div class="dividerLine">&nbsp;</div>
+        <div style="width:20px;display:inline-block;margin-top:38px;height:2px;vertical-align: top;">
+            <strong style="vertical-align: top;">...</strong></div>
+        <div class="dividerLine">&nbsp;</div>
+    </div>
 
-<div style="padding:30px;width:66%;display:inline-block;">
-    <section>
-        <p>
-            Thank you for visiting our website! Please see at the bottom of this page to contact us. 
-            <br>
-            For urgent inquiries please call our phone number or email us directly.
-        </p>
-        <p>
-            <strong>Mailing Address:</strong>
-            <br>
-            House: 21, Walton Gardens, Wembley
-            <br>
-            United Kingdom 
-        </p>
-        <p>
-            <strong>E-Mail:</strong>
-            <br>
-            info@siddhanath.org
-        </p>
-    </section>    
-</div>
+    <div class="row">
+        <div class="col-lg-6 col-sm-6 col-md-6 col-xs-12">
+        <section>
+            <p>
+                Thank you for visiting our website! Please see at the bottom of this page to contact us. 
+                <br>
+                For urgent inquiries please call our phone number or email us directly.
+            </p>
+            <p>
+                <strong>Mailing Address:</strong>
+                <br>
+                21, Walton Gardens, Wembley
+                <br>
+                United Kingdom 
+            </p>
+            <p>
+                <strong>E-Mail:</strong>
+                <br>
+                info@siddhanath.org.uk
+            </p>
+        </section>  
+            </div>
+    </div>
 
-<div class="container-fluid" style="padding-left:30%;padding-bottom:50px;">
-    <div class="dividerLine">&nbsp;</div>
-    <div style="width:20px;display:inline-block;margin-top:40px;height:2px;vertical-align: top;">
-        <strong style="vertical-align: top;">...</strong></div>
-    <div class="dividerLine">&nbsp;</div>
-</div>
+    <div class="row" style="padding-left:30%;padding-bottom:50px;">
+        <div class="dividerLine">&nbsp;</div>
+        <div style="width:20px;display:inline-block;margin-top:38px;height:2px;vertical-align: top;">
+            <strong style="vertical-align: top;">...</strong></div>
+        <div class="dividerLine">&nbsp;</div>
+    </div>
 
+</div>
