--- a/src/app/app-event/app-event.component.html
+++ b/src/app/app-event/app-event.component.html
@@ -1,23 +1,25 @@
 <div>
-  <img src="app/images/events-main.jpg" style="width:100%;height:500px;">
-</div>
+    <div class="row">
+      <img src="assets/images/events-main.jpg" style="width:100%;">
+    </div>
 
-<div class="container-fluid" style="padding-left:30%;">
-    <div class="dividerLine">&nbsp;</div>
-    <div style="width:20px;display:inline-block;margin-top:40px;height:2px;vertical-align: top;">
-        <strong style="vertical-align: top;">...</strong></div>
-    <div class="dividerLine">&nbsp;</div>
-</div>
+    <div class="row" style="padding-left:30%;">
+        <div class="dividerLine">&nbsp;</div>
+        <div style="width:20px;display:inline-block;margin-top:38px;height:2px;vertical-align: top;">
+            <strong style="vertical-align: top;">...</strong></div>
+        <div class="dividerLine">&nbsp;</div>
+    </div>
 
-<div style="padding:30px;width:95%;display:inline-block;">
-    <marquee>
-        <h2>For latest UK event please visit this section</h2>
-    </marquee>
-</div>
+    <div class="row" style="padding:30px;width:95%;display:inline-block;">
+        <marquee>
+            <h2>For latest UK event please visit this section</h2>
+        </marquee>
+    </div>
 
-<div class="container-fluid" style="padding-left:30%;padding-bottom:50px;">
-    <div class="dividerLine">&nbsp;</div>
-    <div style="width:20px;display:inline-block;margin-top:40px;height:2px;vertical-align: top;">
-        <strong style="vertical-align: top;">...</strong></div>
-    <div class="dividerLine">&nbsp;</div>
+    <div class="row" style="padding-left:30%;padding-bottom:50px;">
+        <div class="dividerLine">&nbsp;</div>
+        <div style="width:20px;display:inline-block;margin-top:38px;height:2px;vertical-align: top;">
+            <strong style="vertical-align: top;">...</strong></div>
+        <div class="dividerLine">&nbsp;</div>
+    </div>
 </div>
