--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,19 @@
-body {
-/*  margin: 2em;*/
-/*    font-family: 'Alice', 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
-    font-family:'Merriweather', serif  !important;
-    font-size: 0.9em;;
+@font-face {
+/*
+    font-family: 'AppleChancery';
+    src: url('assets/AppleChancery.ttf'); 
+*/
+    font-family: 'Merriweather';
+    src: url('https://fonts.googleapis.com/css?family=Merriweather'); 
 }
+
+body {
+  margin: 1em;
+/*    font-family: 'Alice', 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
+    font-family: 'Merriweather', 'AppleChancery', 'Alice', 'HelveticaNeue', 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif' !important;
+    font-size: 1.4em;
+}
+
 
 
 .internaldiv {
@@ -39,7 +49,7 @@ transparentDiv {
 .image-token {
     width:100%;
     min-height:300px;
-    border-radius:20px;
+    border-radius:10px;
 }
 
 .tokenDiv {
@@ -74,4 +84,7 @@ transparentDiv {
 .padding-top30 {
   padding-top: 30px;
     padding-right:5px;
+}
+.divBorder {
+    border-style: solid;border-color: blue
 }
