--- a/src/app/app-home/app-home.component.html
+++ b/src/app/app-home/app-home.component.html
@@ -1,92 +1,76 @@
-<div>
+<div class="container-fluid">
     <!-- Main Image -->
-    <div class="row"> <img src="assets/images/home.jpg" style="width:100%;" /> </div>
+    <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="padding-left:0px;padding-right:0px;">
+            <img src="assets/images/home.jpg" style="width:100%;max-height:100%;" /> 
+        </div>
+    </div>
+    
 
     <!-- Marquee Text -->
-    <div class="row dividerDiv" style="padding-top:30px;font-size:2em;">
-        <marquee style=color:white;height:50px;>Humanity, Our Uniting Religion, Breadth, Our Uniting Prayer, Conciousness, Our Uniting God</marquee>
+    <div class="row dividerDiv">
+        <marquee>Humanity, Our Uniting Religion, Breadth, Our Uniting Prayer, Conciousness, Our Uniting God</marquee>
     </div>
 
     <!-- Events & Info -->
-    <div class="row" style="background-color:#efeae4;padding:15px;">
-        <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12 tokenDiv" style="padding:15px;">
-            <a routerLink="/contact" routerLinkActive="active">
-                <span class="text-label">Contact Us</span>
-                <img src="assets/images/contactus300.png" class="image-token">
-            </a>
-        </div>
-        <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12 tokenDiv" style="padding:15px;">
-            <a routerLink="/nlam" routerLinkActive="active">
-                <span class="text-label" style=left:100px;>NLAM</span>
-                <img src="assets/images/nlam300.png" class="image-token">
-            </a>
-        </div>
-        <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12 tokenDiv" style="padding:15px;">
-            <a routerLink="/about" routerLinkActive="active">
-                <span class="text-label">About Us</span>
-                <img src="assets/images/aboutus300.png" class="image-token">
-            </a>
-        </div>
-    </div>
-
-    <!-- About Yogiraj -->
-    <!--<div class="container-fluid dividerDiv"></div>-->
-    <!--
-    <div class="container-fluid outerdiv" style="background-image:url('assets/images/Copy-of-India-2011-0292.jpg'); background-repeat: inherit;width:100%;height:500px;">
-        <div class="container-fluid internaldiv gradientAboutGurunath" style="float:right;background-height:500px;width:35.5%;padding:0px;margin:0px;opacity:0.7;">
-            <label style="color:white">About gurunath</label>
-            <label style="color:white"> Yogiraj Gurunath Siddhanath is a simple, yet remarkable man. Born in Gwalior (northern), India on May 10, 1944, he is descended from the ancient royal family of Ikshavaku Rama of the Solar Dynasty. Despite his ancestry, he attained perfection and bliss at the age of 3 and chose to fulfill his calling as a yogi after completing his education. </label>
-        </div>
-    </div>
-    -->
-
-
-    <div class="row" style="background-repeat: no-repeat; background-image: url(assets/images/Copy-of-India-2011-0292.jpg); background-attachment: scroll; background-position: center center; ">
-        <div>
-            <div style="opacity: 0.2; background-color: #7bb0e7; "></div>
-            <div class="container">
-                <div>
-                    <div>
-                        <div class="clearfix">
-                            <div style="height:150px" class="hr hr-invisible  avia-builder-el-33  el_before_av_heading  avia-builder-el-first "><span class="hr-inner "><span class="hr-inner-style"></span></span>
-                            </div>
-                            <div style="padding-left:50px;padding-bottom:0px;color:#ffffff;font-size:80px;">
-                                <h1 style="font-size:40px;color:white;">About Us</h1>
-                                <div style="font-size:25px;">
-                                    <p>Who is Yogiraj?</p>
-                                </div>
-                                <div class="special-heading-border">
-                                    <div style="border-color:#ffffff"></div>
-                                </div>
-                            </div>                       
-                            <div style="border-radius:0px; ">
-                                <section class="av_textblock_section" itemscope="itemscope" itemtype="https://schema.org/CreativeWork">
-                                    <div itemprop="text">
-                                        <p style="color:#FF9537;font-size:14px;padding-left:50px;padding-right:150px;">Yogiraj Gurunath Siddhanath is a simple, yet remarkable man. Born in Gwalior (northern), India on May 10, 1944, he is descended from the ancient royal family of Ikshavaku Rama of the Solar Dynasty. Despite his ancestry, he attained perfection and bliss at the age of 3 and chose to fulfill his calling as a yogi after completing his education.</p>
-                                    </div>
-                                </section>
-                                <div style=height:500px;padding-left:50px;>
-                                    <a routerLink="/about" routerLinkActive="active">
-                                        <span>Learn More</span>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- close content main div -->
-                <!-- section close by builder template -->
+    <div class="row padding-top30" style="display: flex;justify-content: space-between;">
+        <div class="hover03 hover07 hover08 hover11 eventColumn"> 
+            <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12" style="margin-right:30px;margin-bottom:30px;">                
+                <a routerLink="/contact" routerLinkActive="active">
+                    <figure>
+                        <span>Contact us</span>
+                        <img src="assets/images/contactus300.png" />
+                    </figure>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12" style="margin-right:30px;margin-bottom:30px;">
+                 <a routerLink="/nlam" routerLinkActive="active">
+                    <figure>
+                        <span>NLAM</span>
+                        <img src="assets/images/nlam300.png" />
+                     </figure>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12">
+                <a routerLink="/about" routerLinkActive="active">
+                    
+                    <figure>
+                        <span>About Us</span>
+                        <img src="assets/images/aboutus300.png" />
+                    </figure>
+                </a>
             </div>
         </div>
-        <!--end builder template-->
     </div>
-
-    <!-- New Life Awakening Movement -->
-    <div class="row"  style="height:2px;background-color:white"></div>
-    <div class="row" style="background-image:url('assets/images/background-images/starspace.png'); background-repeat: repeat;">
+    
+    
+    <!-- About Yogiraj -->
+    <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 aboutYogi"> 
+            <div>
+                <h1>About Us</h1>
+                <p>Who is Yogiraj?</p>                  
+                <p style="font-size:14px;padding-right:450px;">
+                    Yogiraj Gurunath Siddhanath is a simple, yet remarkable man. Born in Gwalior (northern), India on May 10, 1944, he is descended from the ancient royal family of Ikshavaku Rama of the Solar Dynasty. Despite his ancestry, he attained perfection and bliss at the age of 3 and chose to fulfill his calling as a yogi after completing his education.
+                </p>
+                <a routerLink="/about" routerLinkActive="active">
+                    <span>Learn More</span>
+                </a>
+            </div>            
+            <img src="assets/images/HimYogi.jpg" style="width:100%;max-height:100%;" /> 
+        </div>
+    </div>
+    
+    
+    <div class="row whiteHr"></div>
+    
+    
+    <!-- New Life Awakening Movement -->    
+    <div class="row nlamHome">
         <a routerLink="/nlam" routerLinkActive="active">
-            <img src="assets/images/nlam_500.png" style="opacity:0.7;width:100%;height:500px;">
+            <img src="assets/images/nlam_500.png" width="100%">
         </a>
     </div>
-    <div class="row" style="height:2px;background-color:white"></div>
+    
+    <div class="row whiteHr"></div>
 </div>
