--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  margin: 1em;
+/*  margin: 1em;*/
 /*    font-family: 'Alice', 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
     font-family: 'Merriweather', 'AppleChancery', 'Alice', 'HelveticaNeue', 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif' !important;
     font-size: 1.4em;
@@ -31,6 +31,9 @@ body {
 .dividerDiv {
     background-color:#FF9537;
     height:100px;
+    font-size:2em;
+    padding-top:30px;    
+    color:white;
 }
 
 transparentDiv {
@@ -46,6 +49,7 @@ transparentDiv {
     background: linear-gradient(#006CAA, #2F89BD); /* Standard syntax */
 }
 
+/*
 .image-token {
     width:100%;
     min-height:300px;
@@ -55,6 +59,7 @@ transparentDiv {
 .tokenDiv {
     
 }
+*/
 .text-label {
     position: absolute;
     top: 150px;
@@ -62,7 +67,7 @@ transparentDiv {
     z-index: 999;
     color: white;
     font-size: 40px;
-    opacity: 0.6;
+    opacity: 1;
     cursor: pointer;
 }
 
@@ -88,3 +93,61 @@ transparentDiv {
 .divBorder {
     border-style: solid;border-color: blue
 }
+
+/*!
+ * Bootstrap-submenu v2.0.4 (https://vsn4ik.github.io/bootstrap-submenu/)
+ * Copyright 2014-2016 Vasily A. (https://github.com/vsn4ik)
+ * Licensed under the MIT license
+ */
+
+/*START following code is used to hover cursor on drop down menu rather than click*/
+.dropdown-menu .sub-menu {
+    left: 100%;
+    position: absolute;
+    top: 0;
+    visibility: hidden;
+    margin-top: -1px;
+}
+
+@media (min-width: 768px) {
+  .dropdown-menu li:hover .sub-menu {
+      visibility: visible;
+  }
+}
+
+@media (min-width: 768px) {
+  .dropdown:hover .dropdown-menu {
+      display: block;
+      cursor:pointer;
+  }
+}
+
+.nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
+    margin-top: 0;
+}
+
+.navbar .sub-menu:before {
+    border-bottom: 7px solid transparent;
+    border-left: none;
+    border-right: 7px solid rgba(0, 0, 0, 0.2);
+    border-top: 7px solid transparent;
+    left: -7px;
+    top: 10px;
+}
+.navbar .sub-menu:after {
+    border-top: 6px solid transparent;
+    border-left: none;
+    border-right: 6px solid #fff;
+    border-bottom: 6px solid transparent;
+    left: 10px;
+    top: 11px;
+    left: -6px;
+}
+/*END following code is used to hover cursor on drop down menu rather than click*/
+
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+    background-color: #e0b13a;
+    color: #ffffff;
+    cursor:pointer;
+}
+
